# Lucca-58HE

./: README.md  adafruit-circuitpython-waveshare_rp2040_zero-en_US-9.1.0.uf2  adafruit_displayio_ssd1306.mpy  analogio.py  boot.py  callibration.py  code.py  kb.py
.anthy/: last-record2_default.utf8
CallibrationLHS/: CMakeLists.txt  callibration.c
CallibrationRHS/: CMakeLists.txt  callibration.c
Case/: Lucca58HE Case Left.stl  Lucca58HE Case Right.stl
LEFT KB AND CODE/: code.py  codeOLD.py  kb.py  kbOLD.py
LEFT KB AND CODE/OLED/: code.py
Lucca current/: analogio.py  boot.py  boot_out.txt  code.py  kb.py
PCBs/: Lucca1.0.kicad_pcbLHS.kicad_pcb  Lucca1.0.kicad_pcbNewKey.kicad_pcb  Lucca1.0.kicad_pcbRHS.kicad_pcb
RIGHT KB AND CODE/: code.py  codeOLD.py  kb.py  kbOLD.py
RP2040test/pico/: CMakeLists.txt  blink.c
Test for lucca!/: code.py  code32.py  codeRHTest.py  codeold.py
adafruit-circuitpython-bundle-9.x-mpy-20240723/: VERSIONS.txt
adafruit-circuitpython-bundle-9.x-mpy-20240723/lib/: adafruit_24lc32.mpy  adafruit_74hc595.mpy  adafruit_acep7in.mpy  adafruit_ad569x.mpy  adafruit_adg72x.mpy  adafruit_adt7410.mpy  adafruit_adxl34x.mpy  adafruit_adxl37x.mpy  adafruit_ags02ma.mpy  adafruit_ahtx0.mpy  adafruit_am2320.mpy  adafruit_amg88xx.mpy  adafruit_as726x.mpy  adafruit_as7341.mpy  adafruit_avrprog.mpy  adafruit_aw9523.mpy  adafruit_aws_iot.mpy  adafruit_bd3491fs.mpy  adafruit_bh1750.mpy  adafruit_bitbangio.mpy  adafruit_bitmapsaver.mpy  adafruit_ble_apple_media.mpy  adafruit_ble_apple_notification_center.mpy  adafruit_ble_ibbq.mpy  (+204 more)
kmk/: kmk_keyboard.py
(+364 files in other folders)
